log
Fri Mar 18 00:51:10 UTC 2022: 
 tests:  0|6
total_score: 0/70
3ea5d51
Fri Mar 18 01:30:57 UTC 2022: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|6
total_score: 0/70
d1b2076
Fri Mar 18 01:31:42 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
2933b56
Sun Mar 20 05:01:46 UTC 2022: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘firstList’:
list.c:42:16: error: ‘List {aka struct List}’ has no member named ‘first’
     return list->first->head;
                ^~
list.c:43:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
935a23a
Sun Mar 20 05:02:31 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
1e99293
Sun Mar 20 21:15:28 UTC 2022: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘nextList’:
list.c:46:16: error: ‘List {aka struct List}’ has no member named ‘next’
     return list->next->data;
                ^~
list.c:47:25: error: ‘List {aka struct List}’ has no member named ‘next’
     list->current = list->next;
                         ^~
Compilation failed
43d954a
